--- a/implementation/Communication/pom.xml
+++ b/implementation/Communication/pom.xml
@@ -25,4 +25,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>tf_u_doing</finalName>
+    </build>
 </project>
