--- a/implementation/.gitignore
+++ b/implementation/.gitignore
@@ -8,11 +8,4 @@
 target/
 
 # IntelliJ
-*.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
+.idea/
