--- a/implementation/MSForecast/pom.xml
+++ b/implementation/MSForecast/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.example</groupId>
         <artifactId>implementation</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>MSForecast</artifactId>
