--- a/implementation/MSProsumer/pom.xml
+++ b/implementation/MSProsumer/pom.xml
@@ -35,5 +35,15 @@
     </dependencies>
     <build>
         <finalName>MSProsumer</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>18</source>
+                    <target>18</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
