--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -29,6 +29,24 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+        <!-- Use following imports in your code:
+        import org.apache.logging.log4j.LogManager;
+        import org.apache.logging.log4j.Logger;
+        -->
+            <dependency>
+                <!-- import Library for Logging -->
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.17.1</version>
+            </dependency>
+            <dependency>
+                <!-- import Library for Logging -->
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.17.1</version>
+            </dependency>
     </dependencies>
 
     <build>
