--- a/implementation/MSForecast/pom.xml
+++ b/implementation/MSForecast/pom.xml
@@ -32,6 +32,12 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>MSExchange</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>MSForecast</finalName>
