--- a/implementation/Communication/pom.xml
+++ b/implementation/Communication/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>tf_u_doing</finalName>
+        <finalName>Communication</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
