--- a/implementation/MSProsumer/pom.xml
+++ b/implementation/MSProsumer/pom.xml
@@ -32,6 +32,25 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- Hibernate ORM framework -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.7.Final</version>
+        </dependency>
+        <!-- SQLite JDBC driver -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
+        <!-- SQLite dialect for Hibernate -->
+        <dependency>
+            <groupId>com.github.gwenn</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>MSProsumer</finalName>
