--- a/implementation/MSStorage/pom.xml
+++ b/implementation/MSStorage/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0</version>
     </parent>
 
-    <artifactId>MSProsumer</artifactId>
+    <artifactId>MSStorage</artifactId>
     <packaging>jar</packaging>
 
-    <name>MSProsumer</name>
+    <name>MSStorage</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -31,6 +31,24 @@
             <artifactId>Communication</artifactId>
             <version>1.0</version>
             <scope>compile</scope>
+        </dependency>
+        <!-- Hibernate ORM framework -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.7.Final</version>
+        </dependency>
+        <!-- SQLite JDBC driver -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
+        <!-- SQLite dialect for Hibernate -->
+        <dependency>
+            <groupId>com.github.gwenn</groupId>
+            <artifactId>sqlite-dialect</artifactId>
+            <version>0.1.0</version>
         </dependency>
 
     </dependencies>
