file name changed to MSStorage

--- a/implementation/MSStorage/pom.xml
+++ b/implementation/MSStorage/pom.xml
@@ -53,7 +53,7 @@
 
     </dependencies>
     <build>
-        <finalName>MSProsumer</finalName>
+        <finalName>MSStorage</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
