message building logic

--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -2,3 +2,7 @@ timeslot.duration=30
 timeslot.maxNumTimeSlotSaved=100
 timeslot.numNewTimeSlots=5
 prosumer.maxAuctionFindingAlgorithm=10
+loadManager.ip=ipAddress
+loadManager.port=1608
+loadManager.serviceType=exchange
+loadManager.id=UUID.randomUUID().toString() 
