Created DiscoveryService and fixed Ack problems regarding scheduled register messages. Also QOL

--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -1,10 +1,24 @@
-ackTimeout=2
+ackTimeout=5
 registerMessageFrequency=3
+
+broadcastAddress=127.0.0.1
+portJumpSize=10
+
 prosumerAddress=10.102.102.17
-exchangeAddress=10.102.102.13
-forecastAddress=10.102.102.9
-broadcastAddress=10.102.102.255
 prosumerPort=6000
+prosumerAmount=10
+
 storagePort=7000
+storageAmount=0
+
+exchangeAddress=10.102.102.13
 exchangePort=8000
-forecastPort=9000
+exchangeAmount=0
+
+solarAddress=10.102.102.9
+solarPort=9000
+solarAmount=0
+
+consumptionAddress=10.102.102.9
+consumptionPort=11000
+consumptionAmount=0
