added Communication to Controller

--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -4,5 +4,4 @@ timeslot.numNewTimeSlots=5
 prosumer.maxAuctionFindingAlgorithm=10
 loadManager.ip=ipAddress
 loadManager.port=1608
-loadManager.serviceType=exchange
-loadManager.id=UUID.randomUUID().toString() 
+loadManager.serviceType=Exchange
