Changed scheduler for register message

--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -1,24 +1,30 @@
-ackTimeout=5
+# General
+ackTimeout=2
 registerMessageFrequency=3
 
+# Test
+testErrorIterations=2
+testErrorAmount=5
+testErrorTimeout=10
+
+# IP addresses
 broadcastAddress=127.0.0.1
-portJumpSize=10
-
 prosumerAddress=10.102.102.17
-prosumerPort=6000
-prosumerAmount=10
-
-storagePort=7000
-storageAmount=0
-
 exchangeAddress=10.102.102.13
-exchangePort=8000
-exchangeAmount=0
-
 solarAddress=10.102.102.9
-solarPort=9000
-solarAmount=0
-
 consumptionAddress=10.102.102.9
+
+# Ports
+portJumpSize=10
+prosumerPort=6000
+storagePort=7000
+exchangePort=8000
+solarPort=9000
 consumptionPort=11000
-consumptionAmount=0
+
+# Instantiations
+prosumerAmount=2
+storageAmount=1
+exchangeAmount=5
+solarAmount=1
+consumptionAmount=1
