Communication for exchange

--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -5,3 +5,6 @@ prosumer.maxAuctionFindingAlgorithm=10
 loadManager.ip=ipAddress
 loadManager.port=1608
 loadManager.serviceType=Exchange
+exchange.ip=ipAddress
+exchange.port=1609
+exchange.serviceType=Exchange
