--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -6,3 +6,5 @@ loadManager.port=1608
 loadManager.serviceType=Exchange
 exchange.port=1618
 exchange.serviceType=Exchange
+exchange.checkDuration=2000
+exchange.minutesToLiveAfterExpiring=500000
