--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -8,3 +8,4 @@ exchange.port=1618
 exchange.serviceType=Exchange
 exchange.checkDuration=2000
 exchange.minutesToLiveAfterExpiring=500000
+exchange.capacity=100
