Periodical registry and sync implemented.

--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -1,6 +1,7 @@
 # General
-ackTimeout=1
+ackTimeout=2
 registerMessageFrequency=3
+syncMessageFrequency=5
 
 # Test
 testErrorIterations=1
@@ -23,8 +24,8 @@ solarPort=9000
 consumptionPort=11000
 
 # Instantiations
-prosumerAmount=5
-storageAmount=5
+prosumerAmount=0
+storageAmount=0
 exchangeAmount=1
-solarAmount=5
-consumptionAmount=5
+solarAmount=1
+consumptionAmount=1
