--- a/implementation/MSExchange/pom.xml
+++ b/implementation/MSExchange/pom.xml
@@ -38,6 +38,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.shared</groupId>
+            <artifactId>maven-invoker</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>MSExchange</finalName>
