changed sending TimeSlot number (just one instead of sending 5 in advance)

--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -1,10 +1,9 @@
 timeslot.duration=30
 timeslot.maxNumTimeSlotSaved=100
 timeslot.numNewTimeSlots=5
+timeSlot.checkInterval=10
 prosumer.maxAuctionFindingAlgorithm=10
-loadManager.port=1608
 loadManager.serviceType=Exchange
-exchange.port=1618
 exchange.serviceType=ExchangeWorker
 exchange.checkDuration=2000
 exchange.minutesToLiveAfterExpiring=500000
