Consumer creation initialize

--- a/implementation/MSProsumer/src/main/resources/config.properties
+++ b/implementation/MSProsumer/src/main/resources/config.properties
@@ -1,4 +1,3 @@
-prosumer.amount = 7
 prosumer.type1 = PUBLIC_BUILDING
 prosumer.type2 = NETTO_ZERO_BUILDING
 prosumer.type3 = CONSUMPTION_BUILDING
@@ -7,6 +6,16 @@ solarPanel.efficiency = 70
 solarPanel.area = 5
 solarPanel.compassAngle = 180
 solarPanel.standingAngle = 45
+consumer.amount = 3
 consumer.type1 = EVEHICLE
 consumer.type2 = HEATING
 consumer.type3 = LIGHTING
+consumer.EVEHICLE.isHeavyConsumer = true
+consumer.EVEHICLE.baseLoad = 1
+consumer.EVEHICLE.averageConsumption = 1
+consumer.HEATING.isHeavyConsumer = true
+consumer.HEATING.baseLoad = 1
+consumer.HEATING.averageConsumption = 1
+consumer.LIGHTING.isHeavyConsumer = false
+consumer.LIGHTING.baseLoad = 1
+consumer.LIGHTING.averageConsumption = 1
