--- a/implementation/MSProsumer/src/main/resources/config.properties
+++ b/implementation/MSProsumer/src/main/resources/config.properties
@@ -10,12 +10,33 @@ consumer.amount = 3
 consumer.type1 = EVEHICLE
 consumer.type2 = HEATING
 consumer.type3 = LIGHTING
+consumer.type4 = HOT_WATER_BOILER
+consumer.type5 = COOLING
+consumer.type6 = STOVE
+consumer.type7 = WASHING_MACHINE
+consumer.type8 = DISHWASHER
+consumer.type9 = TV
+
+
 consumer.EVEHICLE.isHeavyConsumer = true
-consumer.EVEHICLE.baseLoad = 1
-consumer.EVEHICLE.averageConsumption = 1
+consumer.EVEHICLE.averageConsumption = 10000
 consumer.HEATING.isHeavyConsumer = true
-consumer.HEATING.baseLoad = 1
-consumer.HEATING.averageConsumption = 1
+consumer.HEATING.averageConsumption = 1500
+# Lighting consumption adopted for the whole household
 consumer.LIGHTING.isHeavyConsumer = false
-consumer.LIGHTING.baseLoad = 1
-consumer.LIGHTING.averageConsumption = 1
+consumer.LIGHTING.averageConsumption = 100
+consumer.HOT_WATER_BOILER.isHeavyConsumer = true
+consumer.HOT_WATER_BOILER.averageConsumption = 2000
+consumer.COOLING.isHeavyConsumer = true
+consumer.COOLING.averageConsumption = 1500
+consumer.STOVE.isHeavyConsumer = true
+consumer.STOVE.averageConsumption = 2000
+consumer.WASHING_MACHINE.isHeavyConsumer = false
+consumer.WASHING_MACHINE.averageConsumption = 600
+consumer.DISHWASHER.isHeavyConsumer = false
+consumer.DISHWASHER.averageConsumption = 1200
+consumer.TV.isHeavyConsumer = false
+consumer.TV.averageConsumption = 100
+
+
+
