Added OpenCSV dependency Added HistoricDataReader for APOLIS

--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -42,18 +42,23 @@
         import org.apache.logging.log4j.LogManager;
         import org.apache.logging.log4j.Logger;
         -->
-            <dependency>
-                <!-- import Library for Logging -->
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>2.17.1</version>
-            </dependency>
-            <dependency>
-                <!-- import Library for Logging -->
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>2.17.1</version>
-            </dependency>
+        <dependency>
+            <!-- import Library for Logging -->
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <!-- import Library for Logging -->
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
