config Consumer added Clock added

--- a/implementation/MSProsumer/src/main/resources/config.properties
+++ b/implementation/MSProsumer/src/main/resources/config.properties
@@ -20,23 +20,55 @@ consumer.type9 = TV
 
 consumer.EVEHICLE.isHeavyConsumer = true
 consumer.EVEHICLE.averageConsumption = 10000
+consumer.EVEHICLE.allowedStartConsume = 07:00
+consumer.EVEHICLE.allowedEndConsume = 10:00
+consumer.EVEHICLE.usageTime = 120
 consumer.HEATING.isHeavyConsumer = true
 consumer.HEATING.averageConsumption = 1500
+consumer.HEATING.allowedStartConsume = 00:00
+consumer.HEATING.allowedEndConsume = 23:59
+consumer.HEATING.usageTime = 1440
 # Lighting consumption adopted for the whole household
 consumer.LIGHTING.isHeavyConsumer = false
 consumer.LIGHTING.averageConsumption = 100
+consumer.LIGHTING.allowedStartConsume = 00:00
+consumer.LIGHTING.allowedEndConsume = 23:59
+consumer.LIGHTING.usageTime = 360
 consumer.HOT_WATER_BOILER.isHeavyConsumer = true
 consumer.HOT_WATER_BOILER.averageConsumption = 2000
+consumer.HOT_WATER_BOILER.allowedStartConsume = 17:00
+consumer.HOT_WATER_BOILER.allowedEndConsume = 23:59
+consumer.HOT_WATER_BOILER.usageTime = 90
 consumer.COOLING.isHeavyConsumer = true
 consumer.COOLING.averageConsumption = 1500
+consumer.COOLING.allowedStartConsume = 12:00
+consumer.COOLING.allowedEndConsume = 18:00
+consumer.COOLING.usageTime = 120
 consumer.STOVE.isHeavyConsumer = true
 consumer.STOVE.averageConsumption = 2000
+consumer.STOVE.allowedStartConsume = 11:00
+consumer.STOVE.allowedEndConsume = 14:00
+consumer.STOVE.usageTime = 30
 consumer.WASHING_MACHINE.isHeavyConsumer = false
 consumer.WASHING_MACHINE.averageConsumption = 600
+consumer.WASHING_MACHINE.allowedStartConsume = 15:00
+consumer.WASHING_MACHINE.allowedEndConsume = 22:00
+consumer.WASHING_MACHINE.usageTime = 100
 consumer.DISHWASHER.isHeavyConsumer = false
 consumer.DISHWASHER.averageConsumption = 1200
+consumer.DISHWASHER.allowedStartConsume = 15:00
+consumer.DISHWASHER.allowedEndConsume = 22:00
+consumer.DISHWASHER.usageTime = 180
 consumer.TV.isHeavyConsumer = false
 consumer.TV.averageConsumption = 100
+consumer.TV.allowedStartConsume = 18:00
+consumer.TV.allowedEndConsume = 23:59
+consumer.TV.usageTime = 120
+consumer.FRIDGE.isHeavyConsumer = false
+consumer.FRIDGE.averageConsumption = 100
+consumer.FRIDGE.allowedStartConsume = 00:00
+consumer.FRIDGE.allowedEndConsume = 23:59
+consumer.FRIDGE.usageTime = 1440
 
 
 
