--- a/implementation/MSProsumer/src/main/resources/config.properties
+++ b/implementation/MSProsumer/src/main/resources/config.properties
@@ -17,6 +17,13 @@ consumer.type7 = WASHING_MACHINE
 consumer.type8 = DISHWASHER
 consumer.type9 = TV
 
+producer.type1 = MONOCRYSTALLINE_TYPE_x1
+producer.type2 = MONOCRYSTALLINE_TYPE_x2
+producer.type3 =  POLYCRYSTALLINE_TYPE_y1
+producer.type4 =  POLYCRYSTALLINE_TYPE_y2
+producer.type5 =  THIN_FILM_TYPE_z1
+producer.type6 =  THIN_FILM_TYPE_z2
+
 
 consumer.EVEHICLE.isHeavyConsumer = true
 consumer.EVEHICLE.averageConsumption = 10000
@@ -69,6 +76,32 @@ consumer.FRIDGE.averageConsumption = 70
 consumer.FRIDGE.allowedStartConsume = 00:00
 consumer.FRIDGE.allowedEndConsume = 23:59
 consumer.FRIDGE.usageTime = 1440
+
+producer.MONOCRYSTALLINE_TYPE_x1.area = 2,5
+producer.MONOCRYSTALLINE_TYPE_x1.efficiency = 23
+producer.MONOCRYSTALLINE_TYPE_x2.area = 1,9
+producer.MONOCRYSTALLINE_TYPE_x1.compassAngle = 180
+producer.MONOCRYSTALLINE_TYPE_x1.standingAngle = 30
+producer.MONOCRYSTALLINE_TYPE_x2.efficiency = 21
+producer.MONOCRYSTALLINE_TYPE_x2.compassAngle = 190
+producer.MONOCRYSTALLINE_TYPE_x2.standingAngle = 25
+producer.POLYCRYSTALLINE_TYPE_y1.area = 2,7
+producer.POLYCRYSTALLINE_TYPE_y1.efficiency = 19
+producer.POLYCRYSTALLINE_TYPE_y1.compassAngle = 170
+producer.POLYCRYSTALLINE_TYPE_y1.standingAngle = 35
+producer.POLYCRYSTALLINE_TYPE_y2.area = 1,8
+producer.POLYCRYSTALLINE_TYPE_y2.efficiency = 17
+producer.POLYCRYSTALLINE_TYPE_y2.compassAngle = 200
+producer.POLYCRYSTALLINE_TYPE_y2.standingAngle = 40
+producer.THIN_FILM_TYPE_z1.area = 1
+producer.THIN_FILM_TYPE_z1.efficiency = 15
+producer.THIN_FILM_TYPE_z1.compassAngle = 160
+producer.THIN_FILM_TYPE_z1.standingAngle = 45
+producer.THIN_FILM_TYPE_z2.area = 0,75
+producer.THIN_FILM_TYPE_z2.efficiency = 13
+producer.THIN_FILM_TYPE_z2.compassAngle = 210
+producer.THIN_FILM_TYPE_z2.standingAngle = 20
+
 
 
 
