exchange ip added

--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -13,6 +13,8 @@ broadcastAddress=127.0.0.1
 prosumerAddress=10.102.102.17
 solarAddress=10.102.102.9
 consumptionAddress=10.102.102.9
+exchangeAddress= 10.102.102.13
+
 
 # Ports
 portJumpSize=10
