--- a/implementation/MSExchange/pom.xml
+++ b/implementation/MSExchange/pom.xml
@@ -55,6 +55,22 @@
                     <target>18</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>exec-jar</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.example.MainClass</mainClass> <!-- Replace with your main class -->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
