Discovery now sends register messages to IPs defined in VPN, not to broadcastAddress.

--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -11,8 +11,7 @@ testErrorTimeout=2
 # IP addresses
 broadcastAddress=127.0.0.1
 prosumerAddress=10.102.102.17
-solarAddress=10.102.102.9
-consumptionAddress=10.102.102.9
+forecastAddress=10.102.102.9
 exchangeAddress= 10.102.102.13
 
 
@@ -22,11 +21,10 @@ prosumerPort=6000
 storagePort=7000
 exchangePort=8000
 solarPort=9000
-consumptionPort=11000
 
 # Instantiations
-prosumerAmount=10
-storageAmount=10
+prosumerAmount=1
+storageAmount=1
 exchangeAmount=1
-solarAmount=4
+solarAmount=1
 consumptionAmount=1
