--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -15,7 +15,11 @@ storageAddress=10.102.102.17
 exchangeAddress= 10.102.102.13
 forecastAddress=10.102.102.9
 
-
+Prosumer.Address=10.102.102.17
+Storage.Address=10.102.102.17
+Exchange.Address=10.102.102.13
+ExchangeWorker.Address=10.102.102.13
+Forecast.Address=10.102.102.9
 # Ports
 portJumpSize=10
 prosumerPort=6000
