--- a/implementation/MSExchange/src/main/java/config.properties
+++ b/implementation/MSExchange/src/main/java/config.properties
@@ -7,4 +7,5 @@ loadManager.serviceType=Exchange
 exchange.serviceType=ExchangeWorker
 exchange.checkDuration=2000
 exchange.minutesToLiveAfterExpiring=500000
-exchange.capacity=100
+exchange.capacity=20
+loadManager.averagePriceK=20
