--- a/implementation/Communication/src/main/resources/LibraryConfig.properties
+++ b/implementation/Communication/src/main/resources/LibraryConfig.properties
@@ -15,6 +15,7 @@ storageAddress=10.102.102.17
 exchangeAddress= 10.102.102.13
 forecastAddress=10.102.102.9
 
+# TODO: delete?
 Prosumer.Address=10.102.102.17
 Storage.Address=10.102.102.17
 Exchange.Address=10.102.102.13
@@ -29,7 +30,7 @@ exchangePort=8000
 forecastPort=9000
 
 # Instantiations
-prosumerAmount=1
+prosumerAmount=5
 storageAmount=1
 exchangeAmount=1
 forecastAmount=3
