--- a/implementation/pom.xml
+++ b/implementation/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.0.9</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
         <!-- Use following imports in your code:
         import org.apache.logging.log4j.LogManager;
