change price mechanism within config file

--- a/implementation/MSExchange/src/main/resources/config.properties
+++ b/implementation/MSExchange/src/main/resources/config.properties
@@ -9,3 +9,4 @@ exchange.checkDuration=2000
 exchange.minutesToLiveAfterExpiring=500000
 exchange.capacity=3
 loadManager.averagePriceK=20
+loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.MedianMechanism
