--- a/implementation/MSStorage/src/main/resources/database.properties
+++ b/implementation/MSStorage/src/main/resources/database.properties
@@ -1,5 +1,7 @@
 # Database configuration
 database.driverClassName=org.sqlite.JDBC
-database.url=jdbc:sqlite:transactions.db
+database.url=jdbc:sqlite:memory:myDb?cache=shared 
 database.username=user
 database.password=password
+hibernate.hbm2ddl.auto=create-drop
+hibernate.show_sql=true
