duplicating and removing exchange service

--- a/implementation/MSExchange/src/main/resources/config.properties
+++ b/implementation/MSExchange/src/main/resources/config.properties
@@ -4,9 +4,11 @@ timeslot.numNewTimeSlots=5
 timeSlot.checkInterval=10
 prosumer.maxAuctionFindingAlgorithm=10
 loadManager.serviceType=Exchange
+loadManager.averagePriceK=20
+loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.AverageMechanism
 exchange.serviceType=ExchangeWorker
 exchange.checkDuration=2000
 exchange.minutesToLiveAfterExpiring=500000
 exchange.capacity=3
-loadManager.averagePriceK=20
-loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.MedianMechanism
+exchange.terminateMinutes=40
+
