--- a/implementation/MSProsumer/src/main/resources/prosumerConfig.properties
+++ b/implementation/MSProsumer/src/main/resources/prosumerConfig.properties
@@ -24,6 +24,10 @@ consumer.type6 = STOVE
 consumer.type7 = WASHING_MACHINE
 consumer.type8 = DISHWASHER
 consumer.type9 = TV
+consumer.amount.OfPublicBuilding = 3
+consumer.type2.OfPublicBuilding = HEATING
+consumer.type3.OfPublicBuilding = LIGHTING
+consumer.type5.OfPublicBuilding = COOLING
 producer.amount = 3
 producer.type1 = MONOCRYSTALLINE_TYPE_x1
 producer.type2 = MONOCRYSTALLINE_TYPE_x2
