--- a/implementation/MSStorage/src/main/resources/storageConfig.properties
+++ b/implementation/MSStorage/src/main/resources/storageConfig.properties
@@ -1,4 +1,5 @@
 walletStartMoney = 9999.99
 storageCell.amount = 2
 storageCell.capacityInWh = 1000
+storageCell.currentVolumeInWh = 1000
 storageCell.unusedTimeInSec = 70
