--- a/implementation/MSExchange/src/main/resources/config.properties
+++ b/implementation/MSExchange/src/main/resources/config.properties
@@ -5,10 +5,10 @@ timeSlot.checkInterval=10
 prosumer.maxAuctionFindingAlgorithm=10
 loadManager.serviceType=Exchange
 loadManager.averagePriceK=20
-loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.AverageMechanism
+loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.WeightedMechanism
 exchange.serviceType=ExchangeWorker
 exchange.checkDuration=500
 exchange.minutesToLiveAfterExpiring=500000
-exchange.capacity=30
+exchange.capacity=3
 exchange.terminateMinutes=40
 
