--- a/implementation/MSExchange/src/main/resources/config.properties
+++ b/implementation/MSExchange/src/main/resources/config.properties
@@ -1,14 +1,14 @@
-timeslot.duration=25
+timeslot.duration=18
 timeslot.maxNumTimeSlotSaved=100
 timeslot.numNewTimeSlots=5
 timeSlot.checkInterval=10
 prosumer.maxAuctionFindingAlgorithm=10
 loadManager.serviceType=Exchange
 loadManager.averagePriceK=20
-loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.WeightedMechanism
+loadManager.priceMechanism=loadManager.prosumerActionManagement.priceCalculationStrategy.AverageMechanism
 exchange.serviceType=ExchangeWorker
 exchange.checkDuration=500
 exchange.minutesToLiveAfterExpiring=500000
-exchange.capacity=3
+exchange.capacity=20
 exchange.terminateMinutes=40
 
