Bug Fixing and other things

--- a/implementation/MSProsumer/src/main/resources/prosumerConfig.properties
+++ b/implementation/MSProsumer/src/main/resources/prosumerConfig.properties
@@ -1,7 +1,7 @@
 prosumer.type1 = NETTO_ZERO_BUILDING
 prosumer.type2 = CONSUMPTION_BUILDING
 prosumer.type3 = PUBLIC_BUILDING
-prosumer.type4 = PUBLIC_BUILDING
+prosumer.type4 = NETTO_ZERO_BUILDING
 prosumer.type5 = NETTO_ZERO_BUILDING
 prosumer.type6 = CONSUMPTION_BUILDING
 prosumer.type7 = PUBLIC_BUILDING
@@ -15,25 +15,25 @@ solarPanel.area = 5
 solarPanel.compassAngle = 180
 solarPanel.standingAngle = 45
 consumer.amount = 9
-consumer.type1 = EVEHICLE
+consumer.type1 = TV
 consumer.type2 = HEATING
 consumer.type3 = LIGHTING
 consumer.type4 = HOT_WATER_BOILER
 consumer.type5 = COOLING
-consumer.type6 = STOVE
+consumer.type6 = EVEHICLE
 consumer.type7 = WASHING_MACHINE
-consumer.type8 = DISHWASHER
-consumer.type9 = TV
+consumer.type8 = STOVE
+consumer.type9 = DISHWASHER
 consumer.amount.OfPublicBuilding = 3
 consumer.type1.OfPublicBuilding = HEATING
 consumer.type2.OfPublicBuilding = LIGHTING
 consumer.type3.OfPublicBuilding = COOLING
-producer.amount = 3
+producer.amount = 6
 producer.type1 = MONOCRYSTALLINE_TYPE_x1
-producer.type2 = MONOCRYSTALLINE_TYPE_x2
 producer.type3 =  POLYCRYSTALLINE_TYPE_y1
-producer.type4 =  POLYCRYSTALLINE_TYPE_y2
+producer.type2 = MONOCRYSTALLINE_TYPE_x2
 producer.type5 =  THIN_FILM_TYPE_z1
+producer.type4 =  POLYCRYSTALLINE_TYPE_y2
 producer.type6 =  THIN_FILM_TYPE_z2
 
 
